--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   lint:
     name: lint
-    runs-on: ubuntu-latest
+    runs-on: [standart-1-amd64]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
@@ -22,9 +22,10 @@ jobs:
         with:
           version: v1.48.0
           args: --timeout 2m
+
   unit-tests:
     name: unit-tests
-    runs-on: ubuntu-latest
+    runs-on: [standart-1-amd64]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
@@ -32,8 +33,9 @@ jobs:
           go-version: "1.18"
       - name: Run unit tests
         run: make test
+
   acc-tests:
-    runs-on: ubuntu-latest
+    runs-on: [standart-2-amd64]
     name: acc-tests
     env:
       SCALR_TOKEN: ${{ secrets.SCALR_TOKEN }}
@@ -177,10 +179,11 @@ jobs:
           fatmouse/python-builder:master \
           python -u clickfile.py te rm \
           --no-wait ${{ env.RUN_TAG }}
+
   upload-dev:
     name: upload-dev
-    needs: [lint, unit-tests, acc-tests]
-    runs-on: ubuntu-latest
+    # needs: [lint, unit-tests, acc-tests]
+    runs-on: [standart-4-amd64]
     steps:
       - name: Import GPG key
         id: import_gpg
@@ -214,17 +217,24 @@ jobs:
         env:
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
       - name: Upload provider to registry
-        env:
-          DOMAIN: ${{ secrets.DEV_DOMAIN }}
-          BUCKET_NAME: ${{ secrets.DEV_BUCKET_NAME }}
-          GPG_KEY_ID: ${{ steps.import_gpg.outputs.fingerprint }}
-          GPG_PUB_KEY: ${{ steps.import_gpg.outputs.pubkey }}
-        run: bash scripts/upload.sh
+        uses: ./.github/actions/upload-provider
+        with:
+          gcs-bucket: ${{ secrets.DEV_BUCKET_NAME }}
+          registry-domain: ${{ secrets.DEV_DOMAIN }}
+          gpg-key-id: ${{ steps.import_gpg.outputs.fingerprint }}
+          gpg-pub-key: ${{ steps.import_gpg.outputs.pubkey }}
+      - name: Update network mirror
+        uses: ./.gtihub/actions/update-network-mirror
+        with:
+          gcs-bucket: ${{ secrets.DEV_BUCKET_NAME }}
+          registry-domain: ${{ secrets.DEV_DOMAIN }}
+          dry-run: false
+
   release:
     name: release
     if: startsWith(github.ref, 'refs/tags/')
     needs: [lint, unit-tests, acc-tests]
-    runs-on: ubuntu-latest
+    runs-on: [standart-4-amd64]
     steps:
       - name: Import GPG key
         id: import_gpg
