--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   lint:
     name: lint
-    runs-on: [standart-1-amd64]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
@@ -25,7 +25,7 @@ jobs:
 
   unit-tests:
     name: unit-tests
-    runs-on: [standart-1-amd64]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
@@ -35,7 +35,7 @@ jobs:
         run: make test
 
   acc-tests:
-    runs-on: [standart-2-amd64]
+    runs-on: ubuntu-latest
     name: acc-tests
     env:
       SCALR_TOKEN: ${{ secrets.SCALR_TOKEN }}
@@ -182,8 +182,8 @@ jobs:
 
   upload-dev:
     name: upload-dev
-    # needs: [lint, unit-tests, acc-tests]
-    runs-on: [standart-4-amd64]
+    needs: [lint, unit-tests, acc-tests]
+    runs-on: ubuntu-latest
     steps:
       - name: Import GPG key
         id: import_gpg
@@ -224,7 +224,7 @@ jobs:
           gpg-key-id: ${{ steps.import_gpg.outputs.fingerprint }}
           gpg-pub-key: ${{ steps.import_gpg.outputs.pubkey }}
       - name: Update network mirror
-        uses: ./.gtihub/actions/update-network-mirror
+        uses: ./.github/actions/update-network-mirror
         with:
           gcs-bucket: ${{ secrets.DEV_BUCKET_NAME }}
           registry-domain: ${{ secrets.DEV_DOMAIN }}
@@ -234,7 +234,7 @@ jobs:
     name: release
     if: startsWith(github.ref, 'refs/tags/')
     needs: [lint, unit-tests, acc-tests]
-    runs-on: [standart-4-amd64]
+    runs-on: ubuntu-latest
     steps:
       - name: Import GPG key
         id: import_gpg
@@ -265,9 +265,15 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
       - name: Upload provider to registry
-        env:
-          DOMAIN: ${{ secrets.DOMAIN }}
-          BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
-          GPG_KEY_ID: ${{ steps.import_gpg.outputs.fingerprint }}
-          GPG_PUB_KEY: ${{ steps.import_gpg.outputs.pubkey }}
-        run: bash -eucx scripts/upload.sh
+        uses: ./.github/actions/upload-provider
+        with:
+          gcs-bucket: ${{ secrets.BUCKET_NAME }}
+          registry-domain: ${{ secrets.DOMAIN }}
+          gpg-key-id: ${{ steps.import_gpg.outputs.fingerprint }}
+          gpg-pub-key: ${{ steps.import_gpg.outputs.pubkey }}
+      - name: Update network mirror
+        uses: ./.github/actions/update-network-mirror
+        with:
+          gcs-bucket: ${{ secrets.BUCKET_NAME }}
+          registry-domain: ${{ secrets.DOMAIN }}
+          dry-run: false
