--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -27,7 +27,7 @@ on:
 
 jobs:
   acc-tests:
-    runs-on: [standart-2-amd64]
+    runs-on: [standard-2-amd64]
     name: acc-tests
     env:
       ORG_ADMIN_TOKEN: ${{ secrets.ORG_ADMIN_TOKEN }}
