SCALRCORE-27660 > Add more detailed description to update nrtwork mirror action

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -182,7 +182,7 @@ jobs:
 
   upload-dev:
     name: upload-dev
-    # needs: [lint, unit-tests, acc-tests]
+    needs: [lint, unit-tests, acc-tests]
     runs-on: ubuntu-latest
     steps:
       - name: Import GPG key
