--- a/.github/actions/update-network-mirror/action.yml
+++ b/.github/actions/update-network-mirror/action.yml
@@ -2,6 +2,19 @@
 name: 'Update Network mirror'
 description: |-
   Update registry's network mirror with new provider versions.
+  This action is needed for support of JFrog terraform artifacts registry.
+  JFrog fetches infromation about terraform providers from another network mirror,
+  therefore Scalr provider registry needs to implement this network mirror.
+
+  Strucure of network mirror is simple:
+  root
+  └── providers
+      └── registry.scalr.dev
+          └── scalr
+              └── scalr
+                  ├── 1.0.0.json
+                  ├── 1.0.2.json
+                  └── index.json
 
 inputs:
   registry-domain:
