SCALRCORE-28044: Change bucket for secrets

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -100,8 +100,8 @@ jobs:
         shell: bash
         run: |
           mkdir ~/.scalr-labs
-          gsutil cp gs://drone_bucket/prod/private.d/.secrets.yaml fatmouse/tacobell/.secrets.yaml
-          gsutil cp gs://drone_bucket/prod/private.d/github.json ~/.scalr-labs/github.json
+          gsutil cp gs://tacobell_development-156220/.secrets.yaml fatmouse/tacobell/.secrets.yaml
+          gsutil cp gs://tacobell_development-156220/github.json ~/.scalr-labs/github.json
       - name: Configure docker
         shell: bash
         run: gcloud auth configure-docker eu.gcr.io
