SCALRCORE-28027 Updating e2e action to create test app on the agent pool

--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -121,6 +121,7 @@ jobs:
           --branch ${{ env.API_BRANCH }} \
           --run-url ${{ steps.get-job-id.outputs.html_url }} \
           --skip-ui-build \
+          --agent-pool-id="${{vars.TACO_APOOL_ID}}" \
           ${{ env.RUN_TAG }}
       - name: Get Scalr hostname
         shell: bash
