SCALRCORE-24642 Test CI - missing doc file

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -3,7 +3,7 @@ name: default
 on:
   push:
     paths-ignore:
-      - docs/**
+#      - docs/**
       - CHANGELOG.md
       - CONTRIBUTING.md
       - README.md
