--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -255,6 +255,11 @@ jobs:
         with:
           rdme: docs ./docs --key=${{ secrets.README_API_KEY }} --version=0.0.3 --dryRun
 
+      - name: Show versions
+        uses: readmeio/rdme@v8
+        with:
+          rdme: versions
+
   release:
     name: release
     if: startsWith(github.ref, 'refs/tags/')
