--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -121,7 +121,7 @@ jobs:
           --branch ${{ env.API_BRANCH }} \
           --run-url ${{ steps.get-job-id.outputs.html_url }} \
           --skip-ui-build \
-          --agent-pool-id="${{ contains(steps.pr-labels.outputs.labels, ' e2e:tev2_on_server ') && vars.TACO_APOOL_ID || '' }}" \
+          --agent-pool-id="${{ !contains(steps.pr-labels.outputs.labels, ' e2e:tev2_on_server ') && vars.TACO_APOOL_ID || '' }}" \
           ${{ env.RUN_TAG }}
       - name: Get Scalr hostname
         shell: bash
